Bug 983953 - Don't try to use vpx_mem if --with-system-libvpx doesn't provide. r=glandium